objects/Subregion__c.object
<CustomObject>
    <fields>
        <fullName>Region_ID__c</fullName>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Subregions</relationshipLabel>
        <relationshipName>Regions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shift_UQ_Name_Region_ID__c</fullName>
        <description>Custom field to hold uniqueness constraint across Name and Region_ID as Name:Region_ID</description>
        <inlineHelpText>Custom field to hold uniqueness constraint across Name and Region_ID as Name:Region_ID</inlineHelpText>
        <label>Shift UQ Name Region ID</label>
        <length>99</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ZIP_Code_List_String__c</fullName>
        <label>ZIP Code List String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Subregion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subregion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subregions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>